--- a/rover/autonomy/scripts/sm_config.yaml
+++ b/rover/autonomy/scripts/sm_config.yaml
@@ -11,8 +11,8 @@ RUN_STATES:
 origin_pose: [0.0, 0.0]
 heading_vector: [1.1, 0.0]
 
-straight_line_approach_lin_vel: 2.7
-straight_line_approach_ang_vel: 0.3
+straight_line_approach_lin_vel: 0 # 2.7
+straight_line_approach_ang_vel: 0 #0.3
 
 AR_grid_search_w: 12
 AR_grid_search_h: 12
@@ -47,8 +47,15 @@ difficulty: # priority rank!
   OBJ2: 1
 
 # sm_grid_search params
-Aruco_homing_lin_vel: 1.8
-Aruco_homing_ang_vel: 0.8
+Aruco_homing_lin_vel: 0 #1.8
+Aruco_homing_ang_vel: 0 #0.8
 
-Obj_homing_lin_vel: 1
-Obj_homing_ang_vel: 0.5
+Obj_homing_lin_vel: 0 #1
+Obj_homing_ang_vel: 0 #0.5
+
+drive_param_grid_search: aa #'drive'
+pose_param_grid_search: '/pose'
+
+# sm_straight_line params
+drive_param_straight_line: aa #'/drive'
+pose_param_straight_line: '/pose'
