--- a/rover/autonomy/scripts/sm_config.yaml
+++ b/rover/autonomy/scripts/sm_config.yaml
@@ -1,12 +1,13 @@
 # final_state_machine file params
 RUN_STATES:
-  - GNSS1
-  - AR1
-  - OBJ2
-  - OBJ1
-  - AR2
   - AR3
-  - GNSS2
+  - OBJ2
+  # - GNSS1
+  # - AR1
+  # - OBJ1
+  # - AR2
+ 
+  # - GNSS2
 
 origin_pose: [0.0, 0.0]
 heading_vector: [1.1, 0.0]
@@ -32,16 +33,16 @@ OBJ_grid_search_tol: 2
 GS_Traversal_lin_vel: 1
 GS_Traversal_ang_vel: 0.3
 
-run_in_order : True #false means we find shortest path, true means it takes in the same order as states_run_in_order
+run_in_order : False #false means we find shortest path, true means it takes in the same order as states_run_in_order
 
 States_run_in_order:
-  - AR1
-  - AR2
-  - AR3
-  - GNSS1
-  - OBJ2
   - OBJ1
+  - AR2
+  - AR1
+  - GNSS1
   - GNSS2
+  - AR3
+  - OBJ2
 
 # optimal_path_file params
 difficulty: # priority rank!
