--- a/rover/autonomy/scripts/sm_config.yaml
+++ b/rover/autonomy/scripts/sm_config.yaml
@@ -1,11 +1,18 @@
 # final_state_machine file params
 RUN_STATES:
+  - GNSS1
+  - GNSS2
+  - OBJ1
   - AR1
-  # - GNSS1
-  # - AR1
-  # - OBJ1
-  # - AR2
-  # - GNSS2
+  - AR2
+  - AR3
+  - OBJ2
+  
+#  - GNSS1
+ # - AR3
+ # - OBJ1
+  #- OBJ2
+ # - GNSS2
 
 origin_pose: [0.0, 0.0]
 heading_vector: [1.1, 0.0]
@@ -31,17 +38,19 @@ OBJ_grid_search_tol: 2
 GS_Traversal_lin_vel: 2.5
 GS_Traversal_ang_vel: 0.3
 
-run_in_order : False #false means we find shortest path, true means it takes in the same order as states_run_in_order
+run_in_order : True #false means we find shortest path, true means it takes in the same order as states_run_in_order
 #If you set this to true, make sure you do not skip any states
 
 States_run_in_order:
   - GNSS1
-  - OBJ2
-  - AR3
-  - AR1
   - GNSS2
+  - AR1
   - AR2
   - OBJ1
+  - AR3
+  - OBJ2
+
+#- OBJ2
 
 # optimal_path_file params
 difficulty: # priority rank!
