--- a/rover/autonomy/scripts/sm_config.yaml
+++ b/rover/autonomy/scripts/sm_config.yaml
@@ -1,12 +1,7 @@
 # final_state_machine file params
 RUN_STATES:
-  - GNSS1
-  - GNSS2
   - OBJ1
-  - AR1
-  - AR2
-  - AR3
-  - OBJ2
+
   
 #  - GNSS1
  # - AR3
@@ -17,10 +12,10 @@ RUN_STATES:
 origin_pose: [0.0, 0.0]
 heading_vector: [1.1, 0.0]
 
-straight_line_approach_lin_vel: 1.5 # 2.7
+straight_line_approach_lin_vel: 2.7 # 2.7
 straight_line_approach_ang_vel: 0.3 # 0.3
 
-straight_line_obstacle_lin_vel: 1
+straight_line_obstacle_lin_vel: 1.5
 straight_line_obstacle_ang_vel: 0.3
 
 AR_grid_search_w: 40
@@ -38,7 +33,7 @@ OBJ_grid_search_tol: 2
 GS_Traversal_lin_vel: 2.5
 GS_Traversal_ang_vel: 0.3
 
-run_in_order : True #false means we find shortest path, true means it takes in the same order as states_run_in_order
+run_in_order : False #false means we find shortest path, true means it takes in the same order as states_run_in_order
 #If you set this to true, make sure you do not skip any states
 
 States_run_in_order:
