--- a/rover/autonomy/scripts/sm_config.yaml
+++ b/rover/autonomy/scripts/sm_config.yaml
@@ -1,6 +1,12 @@
 # final_state_machine file params
 RUN_STATES:
+  - GNSS1
+  - GNSS2
+  - AR1
+  - AR2
+  - AR3
   - OBJ1
+  - OBJ2
 
   
 #  - GNSS1
@@ -35,17 +41,17 @@ OBJ_grid_search_tol: 2
 GS_Traversal_lin_vel: 2.5
 GS_Traversal_ang_vel: 0.3
 
-run_in_order : False #false means we find shortest path, true means it takes in the same order as states_run_in_order
+run_in_order : TRUE #false means we find shortest path, true means it takes in the same order as states_run_in_order
 #If you set this to true, make sure you do not skip any states
 
 States_run_in_order:
-  - GNSS1
-  - GNSS2
   - AR1
   - AR2
-  - OBJ1
   - AR3
+  - OBJ1
   - OBJ2
+  - GNSS1
+  - GNSS2
 
 #- OBJ2
 
@@ -77,6 +83,6 @@ zed_detection_image_topic: '/zed_node/rgb/image_rect_color'
 zed_detection_info_topic: '/zed_node/rgb/camera_info'
 
 #Change the below flag into true to get data from realsense for item detection
-realsense_detection: False
+realsense_detection: True
 realsense_detection_image_topic: '/camera2/camera/color/image_raw'
 realsense_detection_info_topic: '/camera2/camera/color/camera_info' # for rs, it is 168
