--- a/package.xml
+++ b/package.xml
@@ -1,39 +1,82 @@
 <?xml version="1.0"?>
+<package format="3">
+  <name>rover</name>
+  <version>2.0.0</version>
+  <description>The Rover package</description>
+  <maintainer email="richard@todo.todo">richard</maintainer>
+  <license>TODO</license> 
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
+
+  <buildtool_depend>ament_cmake</buildtool_depend>  
+
+ 
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <export>
+  <member_of_group>rosidl_interface_packages</member_of_group>
+  </export>
+
+</package>
+
+<!-- <?xml version="1.0"?>
 <package format="2">
   <name>rover</name>
   <version>2.0.0</version>
   <description>The Rover package</description>
-
-  <!-- One maintainer tag required, multiple allowed, one person per tag -->
-  <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="richard@todo.todo">richard</maintainer>
-
   <license>TODO</license>
 
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>ros_phoenix</build_depend>
-  <build_depend>message_generation</build_depend>
-  <build_depend>message_filters</build_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>rospy</build_export_depend>
-  <build_export_depend>std_msgs</build_export_depend>
-  <build_export_depend>ros_phoenix</build_export_depend>
-  <exec_depend>roscpp</exec_depend>
-  <exec_depend>rospy</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>ros_phoenix</exec_depend>
-  <exec_depend>message_runtime</exec_depend>
-  <exec_depend>message_filters</exec_depend>
+  
+  <depend>rclcpp</depend>
+  <depend>rclpy</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>visualization_msgs</depend>
+  <depend>tf2_ros</depend>
+  <depend>tf2</depend>
+  <depend>message_filters</depend>
+  <depend>ros_phoenix</depend>
+  
 
+  <exec_depend>rosidl_default_runtime</exec_depend>
 
-  <!-- The export tag contains other, unspecified, tags -->
+ 
   <export>
-    <!-- Other tools can request additional information be placed here -->
-
+    <build_type>ament_cmake</build_type>
+   
+    <rosidl_interface_packages>rosidl_interface_packages</rosidl_interface_packages>
   </export>
-</package>
+</package> -->
+
+
+
+
+
+<!--   
+  <member_of_group>rosidl_interface_packages</member_of_group>
+
+
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+
+
+  <exec_depend>rosidl_default_runtime</exec_depend>
+ -->
+
+
+
+  <!-- CORE DEPENDENCIES (ROS 2 VERSIONS) -->
+  <!-- <depend>rclcpp</depend>          
+  <depend>rclpy</depend>          
+  <depend>std_msgs</depend>
+  <depend>message_filters</depend> 
+  
+  
+  <depend>ros_phoenix</depend>     
+
+</package> -->
