--- a/package.xml
+++ b/package.xml
@@ -14,8 +14,17 @@
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
   <export>
-  <member_of_group>rosidl_interface_packages</member_of_group>
+    <member_of_group>rosidl_interface_packages</member_of_group>
+    <build_type>ament_cmake</build_type>
   </export>
+
+  <depend>rclcpp</depend>          
+  <depend>rclpy</depend>          
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>visualization_msgs</depend>
+  <depend>message_filters</depend> 
 
 </package>
 
