--- a/scripts/services/rover.service
+++ b/scripts/services/rover.service
@@ -4,7 +4,10 @@ After=network.target
 # Before=nextcloud-web.service
 
 [Service]
-ExecStart=/usr/bin/bash /home/rsx/rover_ws/src/rsx-rover/scripts/manual_control_service
+User=rsx
+Environment=HOME=/home/rsx
+Environment=ROS_LOG_DIR=/home/rsx/.ros/log
+ExecStart=/usr/bin/bash /home/rsx/ros2_ws/src/rsx-rover/scripts/manual_control_service
 # ExecReload=
 Type=simple
 Restart=on-failure
