--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,6 +179,14 @@ install(PROGRAMS
 )
 
 install(PROGRAMS
+  rover/autonomy/scripts/final_state_machine_improved.py
+  rover/autonomy/scripts/optimal_path_improved.py
+  rover/autonomy/scripts/sm_grid_search_improve.py
+  rover/autonomy/scripts/sm_straight_line_improved.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(PROGRAMS
   scripts/GUI/gui_pyqt.py
   DESTINATION lib/${PROJECT_NAME}
 )
