Added YOLOv12 data.yaml with 3-class setup again

--- a/scripts/object_detection/data.yaml
+++ b/scripts/object_detection/data.yaml
@@ -5,12 +5,14 @@ train: ../train/images
 val: ../valid/images
 test: ../test/images
 
-nc: 1
-names: ['food']
+nc: 3
+names: ['waterbottle', 'mallet', 'hammer']
 
-roboflow:
-  workspace: rsxobjectdetection
-  project: favoriteappetizer-sftcy
-  version: 2
-  license: CC BY 4.0
-  url: https://universe.roboflow.com/rsxobjectdetection/favoriteappetizer-sftcy/dataset/2
+#roboflow:
+ # workspace: rsxobjectdetection
+ # project: favoriteappetizer-sftcy
+ # version: 2
+ # license: CC BY 4.0
+ # url: https://universe.roboflow.com/rsxobjectdetection/favoriteappetizer-sftcy/dataset/2
+
+ 
