wrote visualize_groundsep.py for testing the visualization of the patrchwork script output. Also added a rviz config for it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -285,6 +285,12 @@ install(PROGRAMS
 )
 
 install(PROGRAMS
+  rover/autonomy/scripts/lidar/visualize_groundsep.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+
+install(PROGRAMS
   launch/tflaunch.py
   DESTINATION lib/${PROJECT_NAME}
 )
