--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -180,14 +180,20 @@ install(PROGRAMS
 install(PROGRAMS
   rover/autonomy/scripts/final_state_machine_new.py
   rover/autonomy/scripts/sm_config.yaml
+  long_lat_goal.csv
   DESTINATION lib/${PROJECT_NAME}
 )
 
 install(PROGRAMS
-  rover/autonomy/scripts/final_state_machine_improved.py
+  # rover/autonomy/scripts/final_state_machine_improved.py
   rover/autonomy/scripts/optimal_path_improved.py
   rover/autonomy/scripts/sm_grid_search_improve.py
   rover/autonomy/scripts/sm_straight_line_improved.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
+install(DIRECTORY 
+  scripts/GUI/tile_cache 
   DESTINATION lib/${PROJECT_NAME}
 )
 
