--- a/rover/autonomy/scripts/sm_config.yaml
+++ b/rover/autonomy/scripts/sm_config.yaml
@@ -5,8 +5,8 @@ RUN_STATES:
   - AR1
   - AR2
   - OBJ1
-  - AR3
   - OBJ2
+  - OBJ3
 
   
 #  - GNSS1
@@ -52,6 +52,7 @@ States_run_in_order:
   - OBJ1
   - OBJ2
   - OBJ3
+  
  
 
 #- OBJ2
