--- a/rover/autonomy/scripts/sm_config.yaml
+++ b/rover/autonomy/scripts/sm_config.yaml
@@ -7,7 +7,8 @@ RUN_STATES:
   - AR3
   - OBJ1
   - OBJ2
-
+  - AR_REC
+  - OBJ_REC
   
 #  - GNSS1
  # - AR3
@@ -52,6 +53,8 @@ States_run_in_order:
   - OBJ2
   - GNSS1
   - GNSS2
+  - AR_REC
+  - OBJ_REC
 
 #- OBJ2
 
