odrive testing coed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -355,6 +355,12 @@ install(PROGRAMS
   DESTINATION lib/${PROJECT_NAME}
 )
 
+install(PROGRAMS
+  rover/drive/scripts/can_sender.py
+  rover/drive/scripts/can_util.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
 # install(
 #   Files rover/drive/config/goose.yaml
 #   DESTINATION share/${PROJECT_NAME}/config
